  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting	 

------------------------------------------------------------------------------
??/??/13  orbeckst, jandom, zhuyi.xue, xdeupi, tyler.je.reddy,
          manuel.nuno.melo, danny.parton, sebastien.buchoux, denniej0,
	  rmcgibbo, richardjgowers

  * 0.8.0

  Enhancements

  * Merge AtomGroups into a new Universe (Issue 157)
  * TPR parser (currently limited to versions 58, 73 and 83 of the
    Gromacs TPR format (Gromacs 4.0 to 4.6.1), see Issue 2)
  * fast XTC seeking (Issue 127)
  * changing resid (set_resid()) or segid (set_segid()) changes the
    topology and lists of resids/segids can be assigned to 
    groups of objects (AtomGroup, ResidueGroup)
  * helanal: additional output of local bend and unit twist angles
    (Issue 133)
  * added support for reading DMS files (DESRES molecular structure)
  * bond connectivity information can be guessed from a PDB file if
    the bond=True keyword is set in Universe (Issue 23)
  * MDAnalysis.analysis.rms.RMSD: calculation of additional RMSDs
  * Plugin to generate nucleic acid helicoidal parameters using X3DNA;
    (must install working version 2.1 of X3DNA independently)
  * can use advanced slicing (with arbitrary lists or arrays) at all
    levels of the hierarchy (Issue 148)
  * coordinate readers and writers can be used as context managers
    with the 'with' statement
  * Can load multiple trajectories as Universe(topology, traj2, traj2,
    ...) in addition to providing all trajectories as a list,
    i.e. Universe(topology, [traj1, traj2, ...])
  * added support for YASP and IBIsCO formats (.trz) (Issue 152)
  * new methods for AtomGroup: packintobox() (only orthorhombic boxes)
  * added non-standard "extended" PDB format (XPDB) that reads
    five-digit residue numbers

  Changes

  * dropped support for Python 2.5; minimum requirement is Python 2.6