@@ -48,6 +48,7 @@ Chronological list of authors
   - Manuel Nuno Melo
   - Robert McGibbon
   - Richard J. Gowers
+  - Alejandro Bernardin
 
 External code
 -------------
